--- a/final_project/Dockerfile
+++ b/final_project/Dockerfile
@@ -15,6 +15,9 @@ COPY ./terraform/main.tf /app/terraform/main.tf
 COPY ./terraform/variables.tf /app/terraform/variables.tf
 COPY ./config/keyfile.json /app/config/keyfile.json
 
+# Set project id as environment variable
+ENV PROJECT_ID=de-zoomcamp-375916
+
 # Set working directory
 WORKDIR /app
 
