--- a/final_project/Dockerfile
+++ b/final_project/Dockerfile
@@ -1,6 +1,11 @@
 # Use Python:3.8 as base image
 FROM python:3.8
 
+# Install nano and sudo
+RUN apt-get update && \
+    apt-get install -y nano sudo && \
+    rm -rf /var/lib/apt/lists/*
+
 # Install Terraform
 ENV TERRAFORM_VERSION=1.1.0
 RUN wget https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip \
@@ -14,6 +19,7 @@ COPY ./src/data_pipeline.py /app/src/data_pipeline.py
 COPY ./src/manipulation_project_id.py /app/src/manipulation_project_id.py
 COPY ./terraform/main.tf /app/terraform/main.tf
 COPY ./terraform/variables.tf /app/terraform/variables.tf
+RUN mkdir config
 
 # Set working directory
 WORKDIR /app
